set up error page

--- a/src/index.css
+++ b/src/index.css
@@ -314,3 +314,9 @@ ul {
   margin: 0 auto;
   margin-top: -1rem;
 }
+
+/* pages */
+.page-100 {
+  height: calc(100vh - 10rem);
+  padding: 5rem 0;
+}
