--- a/src/index.css
+++ b/src/index.css
@@ -182,6 +182,21 @@ ul {
   padding: 0;
 }
 
+.underline {
+  width: 6rem;
+  height: 2px;
+  background: var(--primary-500);
+}
+/* section */
+.section {
+  padding: 4rem 0;
+}
+.section-center {
+  width: 90vw;
+  margin: 0 auto;
+  max-width: var(--max-width);
+}
+
 /* image class prevents logo from spanning 100% */
 .img {
   width: 100%;
@@ -315,8 +330,13 @@ ul {
   margin-top: -1rem;
 }
 
-/* pages */
+/* page */
+/* page minus nav */
 .page-100 {
   height: calc(100vh - 10rem);
-  padding: 5rem 0;
+  padding: 4rem 0;
+}
+/* page minus hero and nav */
+.page {
+  min-height: calc(100vh - (vh + 10rem));
 }
