--- a/src/index.css
+++ b/src/index.css
@@ -104,6 +104,7 @@ h5 {
   font-weight: 300;
   line-height: 1.15;
   text-transform: capitalize;
+  letter-spacing: var(--letterSpacing);
 }
 
 h1 {
